--- a/pages/index/locales/cz.json
+++ b/pages/index/locales/cz.json
@@ -137,7 +137,8 @@
       "phone": "+420 666 226 266",
       "email": "info@dolope.cz",
       "form": {
-        "name": "Jméno a příjmení",
+        "first_name": "Jméno",
+        "last_name": "Příjmení",
         "email": "E-mail",
         "phone": "Telefonní číslo",
         "message": "Zpráva",
