--- a/pages/konfigurator/locales/cz.json
+++ b/pages/konfigurator/locales/cz.json
@@ -317,5 +317,8 @@
     "back_button": "Zpět",
     "next_button": "Pokračovat",
     "show_price_button": "Zobrazit cenu"
+  },
+  "custom_event": {
+    "item_name": "Vestavěná skříň na míru"
   }
 }
