--- a/pages/konfigurator/locales/cz.json
+++ b/pages/konfigurator/locales/cz.json
@@ -105,13 +105,15 @@
         "phone": "+420 606 255 605",
         "currency": "CZK",
         "form": {
-          "first_name": "Jméno:",
-          "last_name": "Příjmení:",
-          "email": "E-mail:",
-          "phone": "Tel. číslo:",
-          "city": "Město / obec:",
-          "zip": "PSČ:",
-          "message": "Doplňkové informace:",
+          "first_name": "Jméno",
+          "last_name": "Příjmení",
+          "email": "E-mail",
+          "phone": "Tel. číslo",
+          "city": "Město / obec",
+          "zip": "PSČ",
+          "message": "Doplňkové informace",
+          "consent_text": "Prohlašuji, že jsem se seznámil/a se",
+          "consent_text_link": "Zásadami zpracování osobních údajů",
           "submit_button": "Odeslat objednávku",
           "error_messages": {
             "default": "* vyžadováno",
