Edit translate in homepage

--- a/locales/web/homepage/cz.json
+++ b/locales/web/homepage/cz.json
@@ -25,7 +25,7 @@
         },
         "3": {
           "title": "Výroba a dodání",
-          "description": "Dříve samotnou finalizací výroby, Vás budeme kontaktovat pro sjednání termínu a času montáže skříně. Skříň v dohodnutém termínu dovezeme, smontujeme a předáme novému majiteli 🙂 následně se doplatí zvýšná 50% částka."
+          "description": "Před dokončením výroby Vás budeme kontaktovat, abychom domluvili termín a čas montáže skříně. Skříň v dohodnutém termínu přivezeme, smontujeme a předáme novému majiteli 🙂. Poté se doplatí zbývajících 50 % částky."
         }
       }
     },
